Reverted use of Integer.valueOf(int) for Java 1.4 compatibility